--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "http-status-codes": "^2.2.0",
     "joi": "^17.6.2",
     "pg": "^8.8.0"
   },
